tests/_errors/negative_str/negative_str.expected
Failed here: tests/_errors/negative_str/negative_str.hdz:1:7
hutor(-"ahoj")
      ^
[31mSyntaxError[0m: (line 1 column 7) `lancok` literal cannot be negative
